# ui-testing-best-practices

./: .gitignore  README.md  pyproject.toml  pytest.ini
config/: locators.yml
config/data/: test_checkout_missing_info_validation.csv  test_login_failure.csv  test_login_success.csv
docs/: environment_setup.md  ui-testing-best-practices.md
test_client/pages/: base_page.py
test_client/pages/sauce_demo/: login_page.py
test_client/pages/sauce_demo/checkout/: cart_page.py  checkout_complete_page.py  checkout_info_page.py  checkout_overview_page.py  inventory_page.py
test_client/util/: logger.py  util.py
tests/: conftest.py  test_checkout.py  test_login.py
tests/fixtures/: browser.py  hooks.py
